Map on paramedic screen now works in a coroutine so it doesn't block UI Tablet views now have bigger buttons and text to make it more readable and usable

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -26,31 +26,31 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editAccount"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center"
-                app:cardCornerRadius="60dp"
-                app:cardUseCompatPadding="true"
-                app:cardElevation="0dp"
                 android:layout_margin="5dp"
-                >
+                app:cardCornerRadius="60dp"
+                app:cardElevation="0dp"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/editAccount">
+
                 <ImageView
                     android:id="@+id/User_Image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:contentDescription="@string/user_avatar"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/img_avatar2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="centerCrop"
-                    android:contentDescription="@string/user_avatar" />
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.cardview.widget.CardView>
 
 
@@ -71,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/new_password_field"
                 android:layout_width="match_parent"
@@ -90,6 +91,24 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/new_password_confirm_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="@string/new_password_confirm"
+                app:endIconMode="password_toggle"
+                app:helperText="Required*"
+                app:helperTextEnabled="true"
+                app:layout_constraintTop_toBottomOf="@+id/new_password_field">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/new_password_confirm_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/birthday_field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,7 +117,7 @@
                 app:endIconMode="clear_text"
                 app:helperText="Required*"
                 app:helperTextEnabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/new_password_field">
+                app:layout_constraintTop_toBottomOf="@+id/new_password_confirm_field">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/birthday_input"
