--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -139,17 +140,18 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/birthday_field"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:hint="@string/birthday_hint"
-                app:endIconMode="clear_text"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusBottomEnd="20dp"
                 app:boxCornerRadiusBottomStart="20dp"
                 app:boxCornerRadiusTopEnd="20dp"
                 app:boxCornerRadiusTopStart="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/password_field">
+                app:endIconMode="clear_text"
+                app:layout_constraintTop_toBottomOf="@+id/password_field"
+                tools:layout_editor_absoluteX="15dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/birthday_input"
@@ -157,6 +159,17 @@
                     android:layout_height="wrap_content"
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/openCalendarButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_baseline_calendar_month_24"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/birthday_field"
+                app:layout_constraintEnd_toEndOf="@+id/birthday_field"
+                app:layout_constraintTop_toTopOf="@+id/birthday_field" />
 
             <Button
                 android:id="@+id/collect_data_button"
