--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
@@ -99,6 +99,6 @@
                 android:layout_height="wrap_content"
                 app:menu="@menu/bottom_paramedic_navigation" />
 
-
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
