Finished creating methods with api calls in view-models Check TutorialsViewModel.kt and UserViewModel.kt

--- a/app/src/main/res/layout/fragment_logged_in_screen.xml
+++ b/app/src/main/res/layout/fragment_logged_in_screen.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.mobileclient.model.UserViewModel" />
+            type="com.example.mobileclient.viewmodels.UserViewModel" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
