--- a/app/src/main/res/layout-night/fragment_login.xml
+++ b/app/src/main/res/layout-night/fragment_login.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.mobileclient.model.UserViewModel" />
+            type="com.example.mobileclient.viewmodels.UserViewModel" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
