--- a/app/src/main/res/layout/fragment_guest_screen.xml
+++ b/app/src/main/res/layout/fragment_guest_screen.xml
@@ -44,6 +44,16 @@
                 android:backgroundTintMode="add"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+                <TextView
+                    android:id="@+id/text"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:text="   "
+                    app:layout_constraintBottom_toTopOf="@+id/tutorials_grid"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tutorials_grid"
                     android:layout_width="wrap_content"
@@ -54,6 +64,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text"
                     tools:itemCount="2"
                     tools:listitem="@layout/tutorial_view_item" />
             </androidx.constraintlayout.widget.ConstraintLayout>
