Reorganized files into folders, Added working settings for creating incidents. Settings are saved in sharedPrefs

--- a/app/src/main/res/layout/fragment_check_equipment.xml
+++ b/app/src/main/res/layout/fragment_check_equipment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    tools:context=".CheckEquipment">
+    tools:context=".fragments.CheckEquipment">
 
     <TextView
         android:id="@+id/textView17"
