--- a/app/src/main/res/navigation/user_nav.xml
+++ b/app/src/main/res/navigation/user_nav.xml
@@ -109,7 +109,7 @@
         android:label="fragment_incident_victim" />
     <fragment
         android:id="@+id/user_settings"
-        android:name="com.example.mobileclient.User_settings"
+        android:name="com.example.mobileclient.fragments.UserSettings"
         android:label="fragment_user_settings"
         tools:layout="@layout/fragment_user_settings" />
     <fragment
