--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -31,7 +31,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".UserActivity"
+            tools:context=".activities.UserActivity"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
